дописал доку для контактов
